fix unresolved opcode handling